bpo-30592: Fixed error messages for some builtins.

Error messages when pass keyword arguments to some builtins that
don't support keyword arguments contained double parenthesis: "()()".
The regression was intriduced by bpo-30534.